# schedcp

./: .gitignore
.claude/: settings.local.json
autosa/: Cargo.toml  DEPLOYMENT_CHECKLIST.md  README.md  SUMMARY.md
autosa/src/: ai_client.rs  daemon.rs  lib.rs  logging.rs  main.rs  main_broken.rs  mcp_client.rs  metrics.rs  policy.rs
mcp/lib/process_manager/src/: binary_extractor.rs  process_manager.rs
mcp/src/: cli.rs  scheduler_manager.rs
